--- a/grlasso_grpreg/grlasso.Rmd
+++ b/grlasso_grpreg/grlasso.Rmd
@@ -33,8 +33,8 @@ sessionInfo()
 
 First, load the dataset; clean up names as needed; and convert factors to, well, factors. Next we remove missing values and reorder predictors (environmental variables first, confounders second). In keeping with standard practice, we'll ln-transform the environmental exposures and the outcome. This is the dataset we'll use to illustrate variable selection methods.
 
-```{r}
-study_pop = read_csv("../Data/studypop.csv") %>% 
+```{r 1}
+study_pop = read_csv("./Data/studypop.csv") %>% 
   clean_names(case = c("old_janitor")) %>% 
   mutate(bmi_cat3 = as.factor(bmi_cat3),
          edu_cat = as.factor(edu_cat),
@@ -56,7 +56,7 @@ y = data$log_telomean
 
 ## Variable grouping for group lasso
 
-```{r}
+```{r 2}
 group3 <- vector()
 group3[grepl("lbx1|0",colnames(x))] <- "Non-Dioxin-like PCB"
 group3[grepl("lbxd", colnames(x))] <- "TEQ"
@@ -82,7 +82,7 @@ cbind(colnames(x), group3) #bind by columns
 
 Note: we use the grpreg with the edited function from the r script file title "grpreg_warn_T.R". That file needs to be run before this codee chunk. 
 
-```{r}
+```{r 3}
 cv_lasso_3 <- cv.grpreg(x, y, group3, 
                         penalty = "grLasso", seed = 1988,
                         n.lambda = 200, max.iter = 20000)
@@ -91,9 +91,11 @@ plot(cv_lasso_3)
 ```
 
 
-## Looping group lasso over different seeds
+## Looping group lasso over 100 different seeds
 
-```{r}
+Note: this code chunk takes very long to run. We saved the output data as a .csv called "summary_data_lasso.csv" that you can use in code chunk 6 and 7.
+
+```{r 4}
 
 # We create a function to run group lasso with differenct seeds
 
@@ -136,7 +138,7 @@ repeat_cv_group_lasso =
 
 ## Tidy data obtained from running group lasso with 100 different seeds
 
-```{r}
+```{r 5}
 
 # Tidy data output from function above
 
@@ -186,6 +188,19 @@ summary_data_grlasso <- full_join(data_grlasso, counts_grlasso, by = "chem") %>%
 
 summary(summary_data_grlasso$beta_grlasso)
 
+# save file for later use 
+#write.csv(summary_data_grlasso, "summary_data_grlasso.csv")
+```
+
+## Visualization of beta values over different seeds (group lasso)
+
+```{r 6 }
+
+# load saved data
+summary_data_grlasso <- read_csv("./grlasso_grpreg/summary_data_grlasso.csv") %>%
+  dplyr::select(-X1)
+
+# reorder the POPs
 summary_data_grlasso$chem <- factor(summary_data_grlasso$chem,levels = c("1,2,3,6,7,8-hxcdd",
                                 "1,2,3,4,6,7,8-hpcdd",
                                "1,2,3,4,6,7,8,9-ocdd",
@@ -204,16 +219,8 @@ summary_data_grlasso$chem <- factor(summary_data_grlasso$chem,levels = c("1,2,3,
                                 "PCB 194",
                                 "PCB 126",
                                 "PCB 169"))
-# save file for later use 
-#write.csv(summary_data_grlasso, "summary_data_grlasso.csv")
-```
 
-## Visualization of beta values over different seeds (group lasso)
-
-```{r}
-
-#inconsistend coefficients when looping the seed
-
+# Figure
 summary_data_grlasso  %>%
   ggplot() + 
   geom_point(aes(x = seed, y = beta_grlasso, color = Group), size = 0.5, alpha = 0.7) + 
@@ -236,38 +243,38 @@ labs(y = "Beta Coefficients",
 
 ## Visualization summarizing the results
 
-```{r}
+```{r 7}
 
-#summary_data_grlasso <- read_csv("./grlasso_grpreg/summary_data_grlasso.csv") %>%
- # dplyr::select(-X1)
-
+# Figure
 summary_data_grlasso %>%
   group_by(chem) %>%
   ggplot(aes(x = chem)) +
- geom_hline(yintercept = 0, color = "black") +
-  geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1, alpha = 1,  position=position_jitter(width = .2))  +
-   geom_boxplot(aes(y = beta_grlasso), outlier.shape = NA, alpha = 0) +
- # stat_summary(aes(y = beta_grlasso), fun.data = mean_sdl, fun.args = list(mult = 1), geom = "errorbar", width=0.25) +
-  # stat_summary(aes(y = beta_grlasso, fill = Group), fun.y = mean, geom ="point", shape=23, size=3, alpha = 1) +
-  #geom_point(aes(y = mean, fill = Group), shape = 23, size = 3, alpha = 1) +
- #geom_errorbar(aes(ymin = mean-se, ymax=mean+se), width=.1, position=position_dodge(0.05)) +
-  geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.002) +
+   geom_hline(yintercept = 0, color = "black") +
+  geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.9, position ="identity") +
+  geom_jitter(aes(y = beta_grlasso, color = Group), shape=16, size = 1.5, position=position_jitter(width = .2)) +
+ # geom_col(aes(y = number_nonzero/4000, fill = Group), width = 0.8, position ="identity", alpha = 0.005) +
   scale_y_continuous(sec.axis = sec_axis(~.*4000, name = "# of Non-zero Beta Coefficients")) +
-  theme_classic() +
+  theme_minimal(base_size = 15) +
   labs(y = "Beta Coefficients",
        x = element_blank()) +
-      theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 14),
-            legend.position = "bottom",
-            legend.text = element_text(size = 12),
-            axis.text.y = element_text(size = 12),
-            text = element_text(size = 12), 
-            aspect.ratio = 1/1,
-            axis.line.x = element_blank(),
-            axis.ticks.x = element_blank(),
-            legend.title = element_blank(),
-            axis.line.y = element_line(color = "black"))
- 
- 
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, size = 14),
+                      legend.position = "bottom",
+                      legend.text = element_text(size = 14),
+        axis.text.y = element_text(size = 12),
+        text = element_text(size = 12), 
+        aspect.ratio = 1/1,
+        axis.line.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        axis.line.y = element_line(color = "black"),
+        legend.title = element_blank(),
+        axis.title.y = element_text(size = 16),
+        strip.background = element_rect(fill = "white")) +
+  geom_boxplot(aes(y = beta_grlasso), outlier.shape = NA, alpha = 0) +
+scale_color_manual(values = c("#D55E00", "blue", "#117733")) +
+   scale_fill_manual(values = c("#E69F00", "#56B4E9", "#999933"))
+
+
+  
 ```
 
 
